translate the message about loss of connection to the server

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -52,6 +52,7 @@ common.help.button=Help
 common.indexes=Indices
 common.input-parameters=Input parameters
 common.key=Key
+common.lost-connection=Lost connection to the server
 common.message-enter-password=Your user name and password are not defined.\nPlease enter your user name and password.
 common.message.apply-changes=Do you wish to apply your changes?
 common.metadata=Meta Data
