--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -52,6 +52,7 @@ common.help.button=Справка
 common.indexes=Индексы
 common.input-parameters=Входные параметры
 common.key=Ключ
+common.lost-connection=Потеряно соединение с сервером.
 common.message-enter-password=Ваши имя пользователя и пароль не определены.\nПожалуйста, введите ваше имя пользователя и пароль.
 common.message.apply-changes=Вы хотите применить изменения?
 common.metadata=Метаданые
