--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -328,6 +328,7 @@ menu.window=Окна
 # -----------------------------------------------------
 # Preferences
 # -----------------------------------------------------
+preferences.AddAction=Добавить действие
 preferences.AddSeparator=Добавить разделитель
 preferences.AlphabetSorting=Сортировать по алфавиту
 preferences.AlternatingRowBackground=Альтернативный фон ячейки
@@ -708,6 +709,8 @@ BrowserTreeFolderPopupMenu.DeleteFolder=Удалить папку
 BrowserTreeFolderPopupMenu.DisconnectAll=Отключить все
 BrowserTreeFolderPopupMenu.NewConnection=Новое подключение
 BrowserTreeFolderPopupMenu.SortConnections=Сортировка подключений
+BrowserTreeFolderPopupMenu.importConnections=Импортировать подключения
+BrowserTreeFolderPopupMenu.exportConnections=Экспортировать подключения
 BrowserTreePopupMenu.CONSTRAINT=ограничение
 BrowserTreePopupMenu.DATABASE_TRIGGER=триггер базы данных
 BrowserTreePopupMenu.DDL_TRIGGER=триггер DDL
@@ -796,6 +799,8 @@ BrowserTreeRootPopupMenu.DisconnectAll=Отключить все
 BrowserTreeRootPopupMenu.NewConnection=Новое подключение
 BrowserTreeRootPopupMenu.NewFolder=Новая папка
 BrowserTreeRootPopupMenu.SortConnections=Сортировка подключений
+BrowserTreeRootPopupMenu.importConnections=Импортировать подключения
+BrowserTreeRootPopupMenu.exportConnections=Экспортировать подключения
 BrowserTreeRootPopupMenu.searchNodes=Поиск узлов...
 BrowserTriggerPanel.Active=Активный
 BrowserTriggerPanel.After=После:
