describe the changes in the trace manager in the documentation

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -2351,9 +2351,9 @@ ER-диаграмма визуализирует табличные связи, 
 	max\_arg\_count & Максимальное количество параметров запроса/процедуры, которое заносится в лог-файл  \\\hline
 \end{longtable}
 
-\anonsubsection{Таблица логов}
+\anonsubsection{Таблица событий}
 
-Таблица логов в Трейс Менеджере заполняется либо при включении трассировки, либо при открытии сохраненного лог-файла в поле верхней части вкладки Трес Менеджера: 
+Таблица событий в Трейс Менеджере заполняется либо при включении трассировки, либо при открытии сохраненного лог-файла в поле верхней части вкладки Трес Менеджера: 
 
 \begin{figure}[H]
 	\centering
@@ -2373,7 +2373,7 @@ ER-диаграмма визуализирует табличные связи, 
 	\centering\arraybslash\bfseries Описание\\\hline
 	\endhead
 	\hline
-	\# &  Номер строки таблицы \\\hline
+	NUM &  Номер строки таблицы \\\hline
 	TSTAMP & Время и дата произошедшего события \\\hline
 	ID\_PROCESS &  Идентификатор процесса\\\hline
 	ID\_THREAD & Идентификатор потока \\\hline
@@ -2441,7 +2441,17 @@ ER-диаграмма визуализирует табличные связи, 
 
 \anonsubsubsection{Просмотр содержимого}
 
-Для удобного просмотра содержимого выделенной строки предусмотрено поле \textit{SQL} под таблицей. Выберите с помощью выпадающего списка \textit{Столбец SQL поля} наименование столбца, кликнете мышью на интересующую строку и в поле \textit{SQL} появится содержимое столбца выбранной строки.
+Для удобного просмотра содержимого выделенной строки предусмотрено поле \textit{Тело события} справа от таблицы. Также при двойном клике на ячейку таблицы, открывается диалог просмотра данной ячейки. Для табличных счетчиков предусмотрена таблица,расположенная под таблицей событий, она заполняется при выделении строки в таблице событий
+
+\anonsubsubsection{Экспорт таблиц}
+При нажатии Правой кнопки мыши на любую из таблиц, появляется контекстное меню экспорта таблицы. Оно предусматривает возможность экспорта данных таблицы в следующие форматы:
+\begin{enumerate}[leftmargin=20pt]
+	\item Файл с разделителем
+	\item Электронная таблица Excel
+	\item файл формат XML
+	\item SQL скрипт заполнения таблицы
+\end{enumerate}
+	
 
 \anonsubsection{Менеджер сессий}
 Менеджер сессий отображает список всех доступных в настоящее время сеансов трассировки. Вкладка менеджера видна только при запущенной текущей сессии аудита. 
