Fix RS-52104. 1. Added methods for generate default INSERT, UPDATE, SELECT requests. 2. Added SQL PopupMenu for Views. 3. Configured generating SQL requests for views & tables from SQL PopupMenu.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -751,6 +751,7 @@ BrowserTreePopupMenu.connectText=Connect Data Source {0}
 BrowserTreePopupMenu.copyName=Copy Name
 BrowserTreePopupMenu.create=Create {0}
 BrowserTreePopupMenu.createTableStatement=CREATE TABLE statement
+BrowserTreePopupMenu.createViewStatement=CREATE VIEW statement
 BrowserTreePopupMenu.dataBaseInformation=Database information
 BrowserTreePopupMenu.delete=Delete {0}
 BrowserTreePopupMenu.deleteText=Remove Data Source {0}
