Translating RS-86226: Translated sections: "Exporting connections" and "Importing connections from a file"

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1701,3 +1701,52 @@ WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.properties=properties
 WindowAddUser.tag=Tag
 WindowAddUser.value=Value
+
+ExportConnectionsPanel.Title=Export Connections
+ExportConnectionsPanel.Step-1=Select connections to be exported
+ExportConnectionsPanel.Step-2=Select the output file
+ExportConnectionsPanel.Step-3=Export selections
+ExportConnectionsPanel.Titles-1=Folders and connections
+ExportConnectionsPanel.Titles-2=Output file
+ExportConnectionsPanel.Titles-3=Export
+ExportConnectionsPanel.Done=Done.
+ExportConnectionsPanel.ExportingConnectionsToFile=Exporting connections to file...
+ExportConnectionsPanel.TheSelectedConnectionsHaveBeenExportedTo=The selected connections have been exported to - {0}
+ExportConnectionsPanel.FinishedExportingConnectionsToFile=Finished exporting connections to file.
+ExportConnectionsPanel.ExportingFolder=Exporting folder: {0} ...
+ExportConnectionsPanel.ExportingConnection=Exporting connection: {0} ...
+ExportConnectionsPanel.ErrorWritingConnectionsToFileTheSystemReturned=Error writing connections to file.\n\nThe system returned:\n
+ExportConnectionsPanelOne.SelectTheConnectionsAndOrFoldersYouWishToExportBelow=Select the connections and/or folders you wish to export below.
+ExportConnectionsPanelOne.PasswordsWillBeExportedAsTheyAreStoredIfYou=<html><b><i>Note: </i></b>Passwords will be exported as they are stored - if you have selected that they be encrypted, they will be exported encrypted, otherwise in plain text.</html>
+ExportConnectionsPanelOne.YouMustSelectAtLeastOneConnectionOrFolderToExport=You must select at least one connection or folder to export
+WizardProcessPanel.Steps=Steps
+WizardProcessPanel.Next=Next
+WizardProcessPanel.Back=Back
+WizardProcessPanel.Cancel=Cancel
+WizardProcessPanel.Help=Help
+ExportConnectionsPanelTwo.SelectTheFileToExportTheSelectionsBelow=Select the file to export the selections below.
+ExportConnectionsPanelTwo.ExportFile=Export file:
+ExportConnectionsPanelTwo.YouMustSelectAFilePathToExportTo=You must select a file path to export to
+ExportConnectionsPanelThree.ExportingSelections=Exporting selections...
+ExportConnectionsPanelThree.Exporting=Exporting ... 
+ImportConnectionsPanelOne.MessageOne=<html>This allows you to import connections from a file - usually generated from the export on another instance of this application.<br />&nbsp;</html>
+ImportConnectionsPanelOne.MessageTwo=<html><b><i>Note: </i></b>Any folders with existing names will be merged with those in the file.<br />Any connections with existing names will be added with the suffix '_1'.<br />Driver libraries are not part of the import process and will need to be added separately.<br />&nbsp;</html>
+ImportConnectionPanelOne.SelectTheFileToImportFoldersAndConnectionsFrom=Select the file to import folders and connections from.
+ImportConnectionPanelOne.ImportFile=Import File:
+ImportConnectionPanelOne.ErrorMessageOne=You must select a file path to import from
+ImportConnectionPanelOne.SelectImportFilePath=Select Import File Path
+ImportConnectionPanel.ImportConnections=Import Connections
+ImportConnectionPanel.StepsOne=Select the import file
+ImportConnectionPanel.StepsTwo=Import from file
+ImportConnectionPanel.TitlesOne=Import file
+ImportConnectionPanel.TitlesTwo=Import
+ImportConnectionPanel.ImportingConnectionsFromFile=Importing connections from file...
+ImportConnectionPanel.TheImportFileWasProcessedSuccessfully=The import file was processed successfully
+ImportConnectionPanel.FinishedImportingConnectionsFromFile=Finished importing connections from file.
+ImportConnectionPanel.ExceptionErrorMessage=Error reading connections from file.\n\nThe system returned:\n{0}
+ImportConnectionPanel.ProcessedFoldersAndConnections=\nProcessed {0} folders and {1} connections
+ImportConnectionsPanelTwo.Importing=Importing ... 
+ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
+ImportExportPanel_3.TableName=Table Name
+ImportExportPanel_3.FilePath=File Path
+ExportConnectionsPanel.done=\nDone
