--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1706,3 +1706,52 @@ WindowAddUser.error.pwds-not-match=Пароли не совпадают
 WindowAddUser.properties=Свойства
 WindowAddUser.tag=Метка
 WindowAddUser.value=Значение
+
+ExportConnectionsPanel.Title=Экспорт подключений
+ExportConnectionsPanel.Step-1=Выберите соединение или соединения для экспорта
+ExportConnectionsPanel.Step-2=Выберите выходной файл
+ExportConnectionsPanel.Step-3=Экспорт выбранных соединений
+ExportConnectionsPanel.Titles-1=Папки и подключения
+ExportConnectionsPanel.Titles-2=Выходной файл
+ExportConnectionsPanel.Titles-3=Экспорт
+ExportConnectionsPanel.Done=Готово.
+ExportConnectionsPanel.ExportingConnectionsToFile=Экспорт подключений в файл...
+ExportConnectionsPanel.TheSelectedConnectionsHaveBeenExportedTo=Выбранные соединения были экспортированы в - {0}
+ExportConnectionsPanel.FinishedExportingConnectionsToFile=Завершен экспорт подключений в файл.
+ExportConnectionsPanel.ExportingFolder=Папка экспорта: {0} ...
+ExportConnectionsPanel.ExportingConnection=Экспорт соединения: {0} ...
+ExportConnectionsPanel.ErrorWritingConnectionsToFileTheSystemReturned=Ошибка записи подключений к файлу.\n\nСистема вернулась:\n
+ExportConnectionsPanelOne.SelectTheConnectionsAndOrFoldersYouWishToExportBelow=Выберите соединения и/или папки, которые вы хотите экспортировать ниже.
+ExportConnectionsPanelOne.PasswordsWillBeExportedAsTheyAreStoredIfYou=<html><b><i>Примечание: </i></b>Пароли будут экспортироваться по мере их сохранения - если вы если вы выбрали, чтобы они были зашифрованы, они будут экспортированы в зашифрованном виде, в противном случае в виде обычного текста.</html>
+ExportConnectionsPanelOne.YouMustSelectAtLeastOneConnectionOrFolderToExport=Вы должны выбрать хотя бы одно подключение или папку для экспорта
+WizardProcessPanel.Steps=Шаги
+WizardProcessPanel.Next=Дальше
+WizardProcessPanel.Back=Назад
+WizardProcessPanel.Cancel=Отменить
+WizardProcessPanel.Help=Помощь
+ExportConnectionsPanelTwo.SelectTheFileToExportTheSelectionsBelow=Выберите файл для экспорта приведенных ниже.
+ExportConnectionsPanelTwo.ExportFile=Файл экспорта:
+ExportConnectionsPanelTwo.YouMustSelectAFilePathToExportTo=Вы должны выбрать путь к файлу для экспорта в
+ExportConnectionsPanelThree.ExportingSelections=Экспорт выборок...
+ExportConnectionsPanelThree.Exporting=Экспорт ... 
+ImportConnectionsPanelOne.MessageOne=<html>Это позволяет вам импортировать соединения из файла - обычно создаваемого в результате экспорта в другом экземпляре этого приложения.<br />&nbsp;</html>
+ImportConnectionsPanelOne.MessageTwo=<html><b><i>Примечание: </i></b>Все папки с существующими именами будут объединены с папками, содержащимися в файле.<br />Любые соединения с существующими именами будут добавлены с помощью суффикса '_1'.<br />Библиотеки драйверов не являются частью процесса импорта и должны быть добавлены отдельно.<br />&nbsp;</html>
+ImportConnectionPanelOne.SelectTheFileToImportFoldersAndConnectionsFrom=Выберите файл для импорта папок и подключений.
+ImportConnectionPanelOne.ImportFile=Импорт файла:
+ImportConnectionPanelOne.ErrorMessageOne=Вы должны выбрать путь к файлу для импорта из
+ImportConnectionPanelOne.SelectImportFilePath=Выберите путь к файлу импорта
+ImportConnectionPanel.ImportConnections=Импорт Соединений
+ImportConnectionPanel.StepsOne=Выберите файл импорта
+ImportConnectionPanel.StepsTwo=Импорт из файла
+ImportConnectionPanel.TitlesOne=Импорт файла
+ImportConnectionPanel.TitlesTwo=Импорт
+ImportConnectionPanel.ImportingConnectionsFromFile=Импорт соединений из файла...
+ImportConnectionPanel.TheImportFileWasProcessedSuccessfully=Файл импорта был успешно обработан
+ImportConnectionPanel.FinishedImportingConnectionsFromFile=Завершен импорт соединений из файла.
+ImportConnectionPanel.ExceptionErrorMessage=Ошибка чтения подключений из файла.\n\nСистема вернулась:\n{0}
+ImportConnectionPanel.ProcessedFoldersAndConnections=\nОбработанные {0} папки и {1} подключения
+ImportConnectionsPanelTwo.Importing=Импорт ... 
+ConnectionImporter.ImportingConnection=Импортирование соединения [ {0} ]
+ImportExportPanel_3.TableName=Имя таблицы
+ImportExportPanel_3.FilePath=Путь к файлу
+ExportConnectionsPanel.done=\nГотово
