Fix RS-86226: Translated selections: "Exporting connections" and "Importing connections from a file"

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -839,17 +839,19 @@ CheckForUpdateNotifier.title=RedExpert Update
 CheckForUpdateNotifier.updateAvailable=Update available
 ClearRecentFilesCommand.message=An IO error occurred clearing the recent open files list
 ColumnConstraintTableModel.Check=Check
-ColumnConstraintTableModel.DeleteRule=DeleteRule
+ColumnConstraintTableModel.DeleteRule=Delete Rule
 ColumnConstraintTableModel.Name=Name
-ColumnConstraintTableModel.ReferenceColumn=ReferenceColumn
-ColumnConstraintTableModel.ReferenceTable=ReferenceTable
-ColumnConstraintTableModel.TableColumn=TableColumn
+ColumnConstraintTableModel.ReferenceColumn=Reference Column
+ColumnConstraintTableModel.ReferenceSchema=Reference Schema
+ColumnConstraintTableModel.ReferenceTable=Reference Table
+ColumnConstraintTableModel.TableColumn=Table Column
 ColumnConstraintTableModel.Type=Type
-ColumnConstraintTableModel.UpdateRule=UpdateRule
+ColumnConstraintTableModel.UpdateRule=Update Rule
 ColumnIndexTableModel.IndexName=Index Name
 ColumnIndexTableModel.IndexedColumn=Indexed Column
 ColumnIndexTableModel.Non-Unique=Non-Unique
 ComparerDBPanel.ComparerDB=Comparer DB
+ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.Authentication=Authentication:
 ConnectionPanel.Basic=Basic
@@ -1116,6 +1118,29 @@ ExecuteSqlScriptPanel.logOutput=Print running statements (This can slow down the
 ExecuteSqlScriptPanel.title.file-chooser=Select SQL Script
 ExecuteSqlScriptPanel.title=Execute SQL Script
 ExportAsSQLPanelOne.exportTip=Single table export retrieves requested data from one \ntable only. This will also allow for the selection of individual \ncolumns from that table.\n\nSelecting a multiple table export \ndoes not allow for individual column selection and all \ncolumns within selected tables are exported. A multiple table \nexport also allows for a single file for all tables within separate.
+ExportConnectionsPanel.Done=Done.
+ExportConnectionsPanel.ErrorWritingConnectionsToFileTheSystemReturned=Error writing connections to file.\n\nThe system returned:\n
+ExportConnectionsPanel.ExportingConnection=Exporting connection: {0} ...
+ExportConnectionsPanel.ExportingConnectionsToFile=Exporting connections to file...
+ExportConnectionsPanel.ExportingFolder=Exporting folder: {0} ...
+ExportConnectionsPanel.FinishedExportingConnectionsToFile=Finished exporting connections to file.
+ExportConnectionsPanel.Step-1=Select connections to be exported
+ExportConnectionsPanel.Step-2=Select the output file
+ExportConnectionsPanel.Step-3=Export selections
+ExportConnectionsPanel.TheSelectedConnectionsHaveBeenExportedTo=The selected connections have been exported to - {0}
+ExportConnectionsPanel.Title=Export Connections
+ExportConnectionsPanel.Titles-1=Folders and connections
+ExportConnectionsPanel.Titles-2=Output file
+ExportConnectionsPanel.Titles-3=Export
+ExportConnectionsPanel.done=\nDone
+ExportConnectionsPanelOne.PasswordsWillBeExportedAsTheyAreStoredIfYou=<html><b><i>Note: </i></b>Passwords will be exported as they are stored - if you have selected that they be encrypted, they will be exported encrypted, otherwise in plain text.</html>
+ExportConnectionsPanelOne.SelectTheConnectionsAndOrFoldersYouWishToExportBelow=Select the connections and/or folders you wish to export below.
+ExportConnectionsPanelOne.YouMustSelectAtLeastOneConnectionOrFolderToExport=You must select at least one connection or folder to export
+ExportConnectionsPanelThree.Exporting=Exporting ... 
+ExportConnectionsPanelThree.ExportingSelections=Exporting selections...
+ExportConnectionsPanelTwo.ExportFile=Export file:
+ExportConnectionsPanelTwo.SelectTheFileToExportTheSelectionsBelow=Select the file to export the selections below.
+ExportConnectionsPanelTwo.YouMustSelectAFilePathToExportTo=You must select a file path to export to
 ExportDBUnitCommand.title=Export DBUnit Dataset
 ExportDelimitedCommand.title=Export Data
 ExportExcelCommand.title=Export Excel Spreadsheet
@@ -1238,6 +1263,24 @@ HostPanel.DataTypes=Data Types
 HostPanel.DatabaseConnection=Database Connection
 HostPanel.DatabaseProperties=Database Properties
 HostPanel.SQLKeywords=SQL Keywords
+ImportConnectionPanel.ExceptionErrorMessage=Error reading connections from file.\n\nThe system returned:\n{0}
+ImportConnectionPanel.FinishedImportingConnectionsFromFile=Finished importing connections from file.
+ImportConnectionPanel.ImportConnections=Import Connections
+ImportConnectionPanel.ImportingConnectionsFromFile=Importing connections from file...
+ImportConnectionPanel.ProcessedFoldersAndConnections=\nProcessed {0} folders and {1} connections
+ImportConnectionPanel.StepsOne=Select the import file
+ImportConnectionPanel.StepsTwo=Import from file
+ImportConnectionPanel.TheImportFileWasProcessedSuccessfully=The import file was processed successfully
+ImportConnectionPanel.TitlesOne=Import file
+ImportConnectionPanel.TitlesTwo=Import
+ImportConnectionPanelOne.ErrorMessageOne=You must select a file path to import from
+ImportConnectionPanelOne.ImportFile=Import File:
+ImportConnectionPanelOne.SelectImportFilePath=Select Import File Path
+ImportConnectionPanelOne.SelectTheFileToImportFoldersAndConnectionsFrom=Select the file to import folders and connections from.
+ImportConnectionsPanelOne.MessageOne=<html>This allows you to import connections from a file - usually generated from the export on another instance of this application.<br />&nbsp;</html>
+ImportConnectionsPanelOne.MessageTwo=<html><b><i>Note: </i></b>Any folders with existing names will be merged with those in the file.<br />Any connections with existing names will be added with the suffix '_1'.<br />Driver libraries are not part of the import process and will need to be added separately.<br />&nbsp;</html>
+ImportConnectionsPanelTwo.Importing=Importing ... 
+ImportConnectionsPanelTwo.ImportingSelections=Importing selections...
 ImportDataFromFilePanel.BrowseButtonText=Browse
 ImportDataFromFilePanel.ColumnMappingTableSource=Source column
 ImportDataFromFilePanel.ColumnMappingTableTargetC=Target column
@@ -1303,6 +1346,8 @@ ImportExportPanelThree.importFileDialogTitle=Select Import File...
 ImportExportPanelThree.invalidDataFileSelection=You must provide a valid data file for each selected table
 ImportExportPanelThree.invalidFileName=Invalid file name
 ImportExportPanelThree.label=Select respective data files for the tables to be processed.
+ImportExportPanel_3.FilePath=File Path
+ImportExportPanel_3.TableName=Table Name
 ImportExportProgressPanel.exportDataLabel=Exporting Data...
 ImportExportProgressPanel.importDataLabel=Importing Data...
 ImportExportXMLPanel.exportTip=Single table export retrieves requested data from one \ntable only. This will also allow for the selection of individual \ncolumns from that table.\n\nSelecting a multiple table export \ndoes not allow for individual column selection and all \ncolumns within selected tables are exported. A multiple table \nexport also allows for a single file for all tables separated \nusing relevant XML tags or a separate file for each table.
@@ -1701,52 +1746,8 @@ WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.properties=properties
 WindowAddUser.tag=Tag
 WindowAddUser.value=Value
-
-ExportConnectionsPanel.Title=Export Connections
-ExportConnectionsPanel.Step-1=Select connections to be exported
-ExportConnectionsPanel.Step-2=Select the output file
-ExportConnectionsPanel.Step-3=Export selections
-ExportConnectionsPanel.Titles-1=Folders and connections
-ExportConnectionsPanel.Titles-2=Output file
-ExportConnectionsPanel.Titles-3=Export
-ExportConnectionsPanel.Done=Done.
-ExportConnectionsPanel.ExportingConnectionsToFile=Exporting connections to file...
-ExportConnectionsPanel.TheSelectedConnectionsHaveBeenExportedTo=The selected connections have been exported to - {0}
-ExportConnectionsPanel.FinishedExportingConnectionsToFile=Finished exporting connections to file.
-ExportConnectionsPanel.ExportingFolder=Exporting folder: {0} ...
-ExportConnectionsPanel.ExportingConnection=Exporting connection: {0} ...
-ExportConnectionsPanel.ErrorWritingConnectionsToFileTheSystemReturned=Error writing connections to file.\n\nThe system returned:\n
-ExportConnectionsPanelOne.SelectTheConnectionsAndOrFoldersYouWishToExportBelow=Select the connections and/or folders you wish to export below.
-ExportConnectionsPanelOne.PasswordsWillBeExportedAsTheyAreStoredIfYou=<html><b><i>Note: </i></b>Passwords will be exported as they are stored - if you have selected that they be encrypted, they will be exported encrypted, otherwise in plain text.</html>
-ExportConnectionsPanelOne.YouMustSelectAtLeastOneConnectionOrFolderToExport=You must select at least one connection or folder to export
-WizardProcessPanel.Steps=Steps
-WizardProcessPanel.Next=Next
 WizardProcessPanel.Back=Back
 WizardProcessPanel.Cancel=Cancel
 WizardProcessPanel.Help=Help
-ExportConnectionsPanelTwo.SelectTheFileToExportTheSelectionsBelow=Select the file to export the selections below.
-ExportConnectionsPanelTwo.ExportFile=Export file:
-ExportConnectionsPanelTwo.YouMustSelectAFilePathToExportTo=You must select a file path to export to
-ExportConnectionsPanelThree.ExportingSelections=Exporting selections...
-ExportConnectionsPanelThree.Exporting=Exporting ... 
-ImportConnectionsPanelOne.MessageOne=<html>This allows you to import connections from a file - usually generated from the export on another instance of this application.<br />&nbsp;</html>
-ImportConnectionsPanelOne.MessageTwo=<html><b><i>Note: </i></b>Any folders with existing names will be merged with those in the file.<br />Any connections with existing names will be added with the suffix '_1'.<br />Driver libraries are not part of the import process and will need to be added separately.<br />&nbsp;</html>
-ImportConnectionPanelOne.SelectTheFileToImportFoldersAndConnectionsFrom=Select the file to import folders and connections from.
-ImportConnectionPanelOne.ImportFile=Import File:
-ImportConnectionPanelOne.ErrorMessageOne=You must select a file path to import from
-ImportConnectionPanelOne.SelectImportFilePath=Select Import File Path
-ImportConnectionPanel.ImportConnections=Import Connections
-ImportConnectionPanel.StepsOne=Select the import file
-ImportConnectionPanel.StepsTwo=Import from file
-ImportConnectionPanel.TitlesOne=Import file
-ImportConnectionPanel.TitlesTwo=Import
-ImportConnectionPanel.ImportingConnectionsFromFile=Importing connections from file...
-ImportConnectionPanel.TheImportFileWasProcessedSuccessfully=The import file was processed successfully
-ImportConnectionPanel.FinishedImportingConnectionsFromFile=Finished importing connections from file.
-ImportConnectionPanel.ExceptionErrorMessage=Error reading connections from file.\n\nThe system returned:\n{0}
-ImportConnectionPanel.ProcessedFoldersAndConnections=\nProcessed {0} folders and {1} connections
-ImportConnectionsPanelTwo.Importing=Importing ... 
-ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
-ImportExportPanel_3.TableName=Table Name
-ImportExportPanel_3.FilePath=File Path
-ExportConnectionsPanel.done=\nDone
+WizardProcessPanel.Next=Next
+WizardProcessPanel.Steps=Steps
