Fix RS-86226: Translated: Exceptions when importing or exporting files, panel when exporting or importing

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1119,7 +1119,7 @@ ExecuteSqlScriptPanel.title.file-chooser=Выбор SQL скрипта
 ExecuteSqlScriptPanel.title=Выполнить SQL скрипт
 ExportAsSQLPanelOne.exportTip=Экспорт одной таблицы извлекает запрошенные данные только из одной\nтаблицы. Это также позволит выбрать отдельные\nстолбцы из этой таблицы. \n\nПри выборе экспорта нескольких таблиц\nтакая возможность отсутствует
 ExportConnectionsPanel.Done=Готово.
-ExportConnectionsPanel.ErrorWritingConnectionsToFileTheSystemReturned=Ошибка записи подключений к файлу.\n\nСистема вернулась:\n
+ExportConnectionsPanel.ErrorWritingConnectionsToFileTheSystemReturned=Ошибка записи выходных данных в файл.\n\nСистема вернула:\n
 ExportConnectionsPanel.ExportingConnection=Экспорт соединения: {0} ...
 ExportConnectionsPanel.ExportingConnectionsToFile=Экспорт подключений в файл...
 ExportConnectionsPanel.ExportingFolder=Папка экспорта: {0} ...
@@ -1139,8 +1139,8 @@ ExportConnectionsPanelOne.YouMustSelectAtLeastOneConnectionOrFolderToExport=Вы
 ExportConnectionsPanelThree.Exporting=Экспорт ... 
 ExportConnectionsPanelThree.ExportingSelections=Экспорт соединений...
 ExportConnectionsPanelTwo.ExportFile=Файл экспорта:
-ExportConnectionsPanelTwo.SelectTheFileToExportTheSelectionsBelow=Укажите путь к файлу, для экспорта соединения.
-ExportConnectionsPanelTwo.YouMustSelectAFilePathToExportTo=Вы должны выбрать путь к файлу для экспорта в
+ExportConnectionsPanelTwo.SelectTheFileToExportTheSelectionsBelow=Укажите полный путь к файлу, для экспорта соединения.
+ExportConnectionsPanelTwo.YouMustSelectAFilePathToExportTo=Вы должны указать полный путь к файлу для экспорта в
 ExportDBUnitCommand.title=Экспорт в DBUnit файл
 ExportDelimitedCommand.title=Экспорт данных
 ExportExcelCommand.title=Экспорт в Excel таблицу
@@ -1263,19 +1263,19 @@ HostPanel.DataTypes=Типы Данных
 HostPanel.DatabaseConnection=Подключение к базе данных
 HostPanel.DatabaseProperties=Свойства базы данных
 HostPanel.SQLKeywords=Ключевые слова SQL
-ImportConnectionPanel.ExceptionErrorMessage=Ошибка чтения подключений из файла.\n\nСистема вернулась:\n{0}
+ImportConnectionPanel.ExceptionErrorMessage=Ошибка чтения подключений из файла.\n\nСистема вернула:\n{0}
 ImportConnectionPanel.FinishedImportingConnectionsFromFile=Завершен импорт соединений из файла.
 ImportConnectionPanel.ImportConnections=Импорт Соединений
 ImportConnectionPanel.ImportingConnectionsFromFile=Импорт соединений из файла...
-ImportConnectionPanel.ProcessedFoldersAndConnections=\nОбработано {0} папок и {1} соединение
+ImportConnectionPanel.ProcessedFoldersAndConnections=\nОбработано папок - {0} и соединений - {1}
 ImportConnectionPanel.StepsOne=Выберите файл импорта
 ImportConnectionPanel.StepsTwo=Импорт из файла
 ImportConnectionPanel.TheImportFileWasProcessedSuccessfully=Файл импорта был успешно обработан
 ImportConnectionPanel.TitlesOne=Импорт файла
 ImportConnectionPanel.TitlesTwo=Импорт
-ImportConnectionPanelOne.ErrorMessageOne=Вы должны выбрать путь к файлу для импорта из
+ImportConnectionPanelOne.ErrorMessageOne=Вы должны указать полный путь к файлу для импорта из
 ImportConnectionPanelOne.ImportFile=Импорт файла:
-ImportConnectionPanelOne.SelectImportFilePath=Выберите путь к файлу импорта
+ImportConnectionPanelOne.SelectImportFilePath=Выберите файл для импорта
 ImportConnectionPanelOne.SelectTheFileToImportFoldersAndConnectionsFrom=Выберите файл для импорта папок и подключений.
 ImportConnectionsPanelOne.MessageOne=<html>Импорт файлов позволяет вам импортировать соединения из файла, обычно создаваемого в результате экспорта в другом экземпляре этого приложения.<br />&nbsp;</html>
 ImportConnectionsPanelOne.MessageTwo=<html><b><i>Примечание: </i></b>Все папки с существующими именами будут объединены с папками, содержащимися в файле.<br />Любые соединения с существующими именами будут добавлены с помощью суффикса '_1'.<br />Библиотеки драйверов не являются частью процесса импорта и должны быть добавлены отдельно.<br />&nbsp;</html>
@@ -1510,7 +1510,7 @@ QueryEditorResultsExporter.ResultSetExportComplete=Экспорт результ
 QueryEditorResultsExporter.SQLExport=Как сохранить SQL запрос:
 QueryEditorResultsExporter.SQLInFile=В текстовый файл
 QueryEditorResultsExporter.SQLQueryEditor=Редактор запроса
-QueryEditorResultsExporter.SelectExportFilePath=Выберите Путь к Файлу Экспорта
+QueryEditorResultsExporter.SelectExportFilePath=Выберите файл для экспорта
 QueryEditorResultsExporter.SelectTheExportTypeDelimiterAndFilePathBelow=Выберите тип экспорта, разделитель и путь к файлу ниже.
 QueryEditorResultsExporter.TableName=Имя таблицы:
 QueryEditorResultsExporter.UseDoubleQuotesForChar/varchar/longvarcharColumns=Используйте двойные кавычки для столбцов char/varchar/longvarchar
