Fix RS-52326. 1. Added comment field with the ability to edit in ObjectDefinitionPanel GUI. 2. Rewritten components arranging in ObjectDefinitionPanel on GridBagHelper.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -12,6 +12,7 @@ common.clear.button=Clear
 common.close.button=Close
 common.collate=Collation
 common.columns=Columns
+common.comment-field-label=Comment
 common.confirmation-request=Exit without saving changes?
 common.confirmation=Confirmation
 common.connect.button=Connect
