--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -12,6 +12,7 @@ common.clear.button=Очистить
 common.close.button=Закрыть
 common.collate=Сортировка
 common.columns=Столбцы
+common.comment-field-label=Комментарий
 common.confirmation-request=Выйти без сохранения?
 common.confirmation=Подтверждение
 common.connect.button=Подключиться
