Correct unsound constructions in the documentation

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -2360,7 +2360,7 @@ ER-диаграмма визуализирует табличные связи, 
 	\includegraphics[width = 1\linewidth]{img/trace_mag3.png}
 \end{figure}
 
-В таблице логов по умолчанию отображаются все возможные столбцы, содержащие информацию о зарегистрированном событии. По желанию некоторые столбцы можно скрыть. Для этого зайдите на вкладку \ttt{Видимые столбцы} и расставьте галочки под именами нужных столбцов.
+В таблице событий по умолчанию отображаются все возможные столбцы, содержащие информацию о зарегистрированном событии. По желанию некоторые столбцы можно скрыть. Для этого зайдите на вкладку \ttt{Видимые столбцы} и внесите необходимые изменения.
 
 Краткое описание значения каждого столбца таблицы описано ниже:
 
@@ -2448,8 +2448,8 @@ ER-диаграмма визуализирует табличные связи, 
 \begin{enumerate}[leftmargin=20pt]
 	\item Файл с разделителем
 	\item Электронная таблица Excel
-	\item файл формат XML
-	\item SQL скрипт заполнения таблицы
+	\item Файл XML
+	\item SQL скрипт заполнения таблицы базы данных
 \end{enumerate}
 	
 
