Document data import from csv (RS-86401)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -597,6 +597,40 @@ Red Expert использует информацию, доступную из у
 При попытке создания базы данных может возникнуть ошибка шифрования сетевого соединения (wire encryption). Для поддержки шифрования необходима версия Java не ниже 1.8.0\_161 или установленное JCE дополнение. В противном случае следует изменить параметр \ttt{firebird.conf}: \ttt{WireCrypt = Disabled}.
 \end{redremark}
 
+\anonsubsection{Импорт данных из файла}
+
+\begin{enumerate}
+	\item Откройте вкладку "Import data from file" на центральной панели. Для этого выберите пунк меню \textit{База данных} $\rightarrow$ \textit{Импорт данных из файла}.
+	\item Заполните соответствующие поля, как показано ниже:
+	\begin{longtable}[r]{|>{\bfseries}m{3.9cm}|m{11cm}|}
+		\hline
+		Целевая таблица & Таблица, в которую будет производиться импорт.\\\hline
+		Тип файла & Расширение импортируемого файла. На данный момент доступен только CSV.\\\hline
+		Путь к файлу & Путь к файлу-источнику данных.\\\hline
+	\end{longtable}
+	\item Нажмите на кнопку "Cчитать Файл", чтобы прочитать импортированный файл в табличном представлении в соответсвующую таблицу.
+	\item Заполните соответствующие поля, как показано ниже:
+	\begin{longtable}[r]{|>{\bfseries}m{3.9cm}|m{11cm}|}
+		\hline
+		Разделитель & Тип разделителя данных в CSV файлах.\\\hline
+		Первая строка заголовки столбцов источника & Следует ли сделать значения в первой строке выбранного файла заголовками столбцов в табличном представлении. В таком случае при импорте первая строка не будет учитываться.\\\hline
+		Паттерн даты & Формат времени.\\\hline
+		Паттерн времени & Формат даты.\\\hline
+		Разделитель даты/времени & Тип разделителя между датой и временем.\\\hline
+		Первая импортируемая строка & Строка, начиная с которой будут импортированы данные.\\\hline
+		Последняя импортируемая строка & Строка, поcле которой импорт данных будет прекращён. Строки, непопадающие в диапазон между первой и последней импортируемой строкой, будут проигнорированы.\\\hline
+		Шаг коммита & Количество записей, после которого будет произведено подтверждение транзакии и сохранение данных в таблице.\\\hline
+		Очистить таблицу перед вставкой & Следует ли очистить целевую таблицу от данных, которые в ней были до импорта.\\\hline
+	\end{longtable}
+	\item Нажмите на кнопку "Импортировать Данные".
+\end{enumerate}
+
+Если таблица сопоставлений не заполнилась автоматически после выбора разделителя, то для заполнения нужно нажать на кнопку "Заполнить Таблицу Сопоставлений".	
+
+Если файл-исходник уже считан в таблицу предпросмотра, то при изменении полей \ttt{Разделитель} или \ttt{Первая строка заголовки столбцов источника} изменения будут применяться автоматически.
+
+В процессе импортирования будет выведено диалоговое окно. Нажатие на кнопку "Отмена" остановит процесс импорта данных. Все изменения, произошедшие до остановки импортирования, сохранятся в таблице.
+
 \anonsubsection{Дополнительные параметры}
 
 Дополнительные параметры соединения можно ввести, выбрав вкладку «Расширенные». На ней располагается таблица с двумя столбцами. Левый соответствует параметру подключения, а правый -- его значению. Обратитесь к соответствующей документации JDBC драйвера, чтобы узнать, какие (если есть) дополнительные параметры подключения к базе данных могут быть установлены.
