--- a/guide/general_defs.tex
+++ b/guide/general_defs.tex
@@ -269,7 +269,7 @@
 
 \begin{flushright}
 \Huge {\xhrulefill{red}{2mm}\color{red} RedExpert} \\
-\LARGE Версия ${VERSION}\\
+\LARGE Версия 1.8 \\
 #1
 \end{flushright}
 
