Add screenshot of data import module (RS-86401)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -600,7 +600,11 @@ Red Expert использует информацию, доступную из у
 \anonsubsection{Импорт данных из файла}
 
 \begin{enumerate}
-	\item Откройте вкладку "Import data from file" на центральной панели. Для этого выберите пунк меню \textit{База данных} $\rightarrow$ \textit{Импорт данных из файла}.
+	\item Откройте вкладку "Import data from file" на центральной панели. Для этого выберите пунк меню \textit{База данных} $\rightarrow$ \textit{Импорт данных из файла}. Откроется вкладка:
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.95\linewidth]{img/ImportData.png}
+	\end{figure}
 	\item Заполните соответствующие поля, как показано ниже:
 	\begin{longtable}[r]{|>{\bfseries}m{3.9cm}|m{11cm}|}
 		\hline
@@ -614,8 +618,8 @@ Red Expert использует информацию, доступную из у
 		\hline
 		Разделитель & Тип разделителя данных в CSV файлах.\\\hline
 		Первая строка заголовки столбцов источника & Следует ли сделать значения в первой строке выбранного файла заголовками столбцов в табличном представлении. В таком случае при импорте первая строка не будет учитываться.\\\hline
-		Паттерн даты & Формат времени.\\\hline
-		Паттерн времени & Формат даты.\\\hline
+		Паттерн даты & Формат даты. Более подробно о них рассказано \hyperlink{tab:datapattern}{здесь}.\\\hline
+		Паттерн времени & Формат времени. Более подробно о них рассказано \hyperlink{tab:datapattern}{здесь}.\\\hline
 		Разделитель даты/времени & Тип разделителя между датой и временем.\\\hline
 		Первая импортируемая строка & Строка, начиная с которой будут импортированы данные.\\\hline
 		Последняя импортируемая строка & Строка, поcле которой импорт данных будет прекращён. Строки, непопадающие в диапазон между первой и последней импортируемой строкой, будут проигнорированы.\\\hline
@@ -2736,7 +2740,7 @@ ER-диаграмма визуализирует табличные связи, 
 \anonsubsection{Таблица набора данных}
 
 Настройки для таблицы результатов выборки.
-
+\hypertarget{tab:datapattern}{}
 \begin{longtable}[r]{|>{\ttfamily}m{5cm}|m{10.5cm}|}
 	\hline
 	\centering\normalfont\bfseries Параметр &
